--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebSite</title>
 
-    <link rel="stylesheet" href="/chame/css" />
-    <link rel="stylesheet" href="/chame/css/vendor" />
+    <link rel="stylesheet" href="/chame-css-loader" />
+    <link rel="stylesheet" href="/chame-css-loader/vendor" />
 
     
 
@@ -51,7 +51,7 @@
         </footer>
     </div>
 
-    <script src="/chame/js/vendor"></script>
-    <script src="/chame/js"></script>
+    <script src="/chame-js-loader/vendor"></script>
+    <script src="/chame-js-loader"></script>
 </body>
 </html>
