--- a/WebSite/ClientApp/less/bootstrap.less
+++ b/WebSite/ClientApp/less/bootstrap.less
@@ -1,11 +1,17 @@
 ﻿//Bootstrap && Bootswatch Flatly Theme
 @import "../../node_modules/bootstrap/less/bootstrap.less";
-@import "../../node_modules/bootswatch-less/bootswatch/lumen/variables.less";
-@import "../../node_modules/bootswatch-less/bootswatch/lumen/bootswatch.less";
+@import "../../node_modules/bootswatch-less/bootswatch/readable/variables.less";
+@import "../../node_modules/bootswatch-less/bootswatch/readable/bootswatch.less";
 
 //** Load fonts from this directory.
 @icon-font-path: "../fonts/";
 
+
+@border-radius-base: 0;
+@border-radius-large: 0;
+@border-radius-small: 0;
+
+/*@body-bg: @brand-primary;*/
 /*// Font Awesome
 @import "../../node_modules/font-awesome/less/variables.less";
 @import "../../node_modules/font-awesome/less/font-awesome.less";
