--- a/WebSite/ClientApp/less/site.less
+++ b/WebSite/ClientApp/less/site.less
@@ -1,2 +1,9 @@
-﻿body {
+﻿.page {
+    margin-top: 50px;
+
+    .package {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        display: block;
+    }
 }
