--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -2,8 +2,7 @@
 <div class="jumbotron page">
     <h1>Chame</h1>
     <p>
-        APS.NET Core library for theming your applicaton. A tool for loading different JavaScript, CSS and Razor Partial Views for different themes.
-        <br/>
+        ASP.NET Core library for theming your applications when you need to load different JavaScript, CSS and Razor Views for different themes.
     </p>
 
     <div class="package">
@@ -16,7 +15,9 @@
         <pre>> dotnet add package EntityFramework --version 6.2.0-beta1</pre>
     </div>
 
-    <p><a class="btn btn-primary btn-lg" href="https://www.nuget.org/packages/EntityFramework/6.2.0-beta1">NuGet</a></p>
+    <a class="btn btn-primary btn-lg" href="https://www.nuget.org/packages/EntityFramework/6.2.0-beta1">
+        <i class="fa fa-github fa-lg" aria-hidden="true"></i>&nbsp;&nbsp;get source code
+    </a>
 </div>
 
 
