--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chame</title>
     <link rel="stylesheet" href="/chame-css-loader" />
-    <link rel="stylesheet" href="/chame-css-loader/vendor" />
+    <link rel="stylesheet" href="/chame-css-loader?filter=vendor" />
 </head>
 <body>
     <div class="container">
@@ -13,7 +13,7 @@
             @RenderBody()
         </main>
     </div>
-    <script src="/chame-js-loader/vendor"></script>
+    <script src="/chame-js-loader?filter=vendor"></script>
     <script src="/chame-js-loader"></script>
 </body>
 </html>
