--- a/WebSite/ClientApp/less/bootstrap.less
+++ b/WebSite/ClientApp/less/bootstrap.less
@@ -3,43 +3,15 @@
 @import "../../node_modules/bootswatch-less/bootswatch/readable/variables.less";
 @import "../../node_modules/bootswatch-less/bootswatch/readable/bootswatch.less";
 
-//** Load fonts from this directory.
+// Load fonts from this directory.
 @icon-font-path: "../fonts/";
 
-
+// Reset border radius.
 @border-radius-base: 0;
 @border-radius-large: 0;
 @border-radius-small: 0;
 
-/*@body-bg: @brand-primary;*/
-/*// Font Awesome
-@import "../../node_modules/font-awesome/less/variables.less";
-@import "../../node_modules/font-awesome/less/font-awesome.less";
-@import "font-awesome.override.less";
-
-// Awesome Bootstrap Checkbox
-@import "awesome-bootstrap-checkbox.less";
-
-// Pikaday
-@import "pikaday.less";
-@import "pikaday.override.less";
-
-// Palvelutori common
-@import "common.less";
-
-// Palvelutori components
-@import "navbar.less";
-@import "logoblock.less";
-@import "footer.less";
-@import "home.less";
-@import "cookies.less";
-@import "cleaning-progress.less";
-@import "process.less";
-@import "admin.less";
-@import "orderinfo.less";
-
-// Field asetukset
-@import "bf-form.less";
-
-// NGFADER
-@import "ngFader.less";*/
+// Set orange body background :)
+body {
+    background: #e95420;
+}
