--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="jumbotron page">
+﻿<div class="jumbotron page">
     <h1>Chame</h1>
     <p>
         ASP.NET Core library for theming your applications when you need to load different JavaScript, CSS and Razor Views for different themes.
@@ -24,5 +23,7 @@
 <div class="jumbotron page">
     <h2>What is...?</h2>
     <h3>What is...?</h3>
-    
+
+    @Html.Partial("Footer")
+
 </div>
