--- a/WebSite/wwwroot/css/site.css
+++ b/WebSite/wwwroot/css/site.css
@@ -1,1 +1,1 @@
-.page{margin-top:50px}.page .package{margin-top:40px;margin-bottom:40px;display:block}
+.page{margin-top:50px}.page .package{margin-top:40px;margin-bottom:40px;display:block}.page h2{margin-bottom:20px}
