--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -1,14 +1,18 @@
 ﻿<div class="jumbotron page">
-    <h1>Chame</h1>
+    <h1>
+        Chame
+    </h1>
+    <h2>
+        ASP.NET Core JavaScript, CSS and Razor view loader.
+    </h2>
     <p>
-        ASP.NET Core library for theming your applications when you need to load different JavaScript, CSS and Razor Views for different themes.
+        Developing multi-tenant applications? Need to theme your applications? Need to load different JavaScript, CSS or Razor views for different users?
     </p>
-
     <div class="package">
         Package Manager
         <pre>PM> Install-Package EntityFramework -Version 6.2.0-beta1</pre>
-    </div>    
-    
+    </div>
+
     <div class="package">
         .NET CLI
         <pre>> dotnet add package EntityFramework --version 6.2.0-beta1</pre>
@@ -24,6 +28,6 @@
     <h2>What is...?</h2>
     <h3>What is...?</h3>
 
-@*    @Html.Partial("Footer")*@
+    @*    @Html.Partial("Footer")*@
 
 </div>
