--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -2,12 +2,11 @@
     <h1>
         Chame
     </h1>
+    
     <h2>
-        ASP.NET Core JavaScript, CSS and Razor view loader.
+        ASP.NET Core JavaScript, CSS and Razor view loader for multi-tenant and themeable applications.
     </h2>
-    <p>
-        Developing multi-tenant applications? Need to theme your applications? Need to load different JavaScript, CSS or Razor views for different users?
-    </p>
+
     <div class="package">
         Package Manager
         <pre>PM> Install-Package EntityFramework -Version 6.2.0-beta1</pre>
