--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chame</title>
-    <link rel="stylesheet" href="/chame-css-loader" />
-    <link rel="stylesheet" href="/chame-css-loader?filter=vendor" />
+    <link rel="stylesheet" href="/chame-loader/css" />
+    <link rel="stylesheet" href="/chame-loader/css?filter=vendor" />
 </head>
 <body>
     <main>
@@ -13,7 +13,7 @@
             @RenderBody()
         </div>
     </main>
-    <script src="/chame-js-loader?filter=vendor"></script>
-    <script src="/chame-js-loader"></script>
+    <script src="/chame-loader/js?filter=vendor"></script>
+    <script src="/chame-loader/js"></script>
 </body>
 </html>
