--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -1,32 +1,3 @@
-﻿<div class="jumbotron page">
-    <h1>
-        Chame
-    </h1>
-    
-    <h2>
-        ASP.NET Core JavaScript, CSS and Razor view loader for multi-tenant and themeable applications.
-    </h2>
-
-    <div class="package">
-        Package Manager
-        <pre>PM> Install-Package EntityFramework -Version 6.2.0-beta1</pre>
-    </div>
-
-    <div class="package">
-        .NET CLI
-        <pre>> dotnet add package EntityFramework --version 6.2.0-beta1</pre>
-    </div>
-
-    <a class="btn btn-primary btn-lg" href="https://www.nuget.org/packages/EntityFramework/6.2.0-beta1">
-        <i class="fa fa-github fa-lg" aria-hidden="true"></i>&nbsp;&nbsp;get source code
-    </a>
-</div>
-
-
-<div class="jumbotron page">
-    <h2>What is...?</h2>
-    <h3>What is...?</h3>
-
-    @*    @Html.Partial("Footer")*@
-
+﻿<div>
+    ASP.NET Core JavaScript, CSS and Razor view loader for multi-tenant and themeable applications.    
 </div>
