--- a/Demo/WebSite/wwwroot/css/site.css
+++ b/Demo/WebSite/wwwroot/css/site.css
@@ -1,1 +1,1 @@
-.page{margin-top:50px}.page .package{margin-top:40px;margin-bottom:40px;display:block}.page h2{margin-bottom:20px}
+.page{margin-top:50px}.page .package{margin-top:40px;margin-bottom:40px;display:block}.demo-container,.page h2{margin-bottom:20px}.demo-container{padding:25px;margin-top:20px;border:4px dotted red}
