--- a/Demo/WebSite/Views/Demo/Demo1.cshtml
+++ b/Demo/WebSite/Views/Demo/Demo1.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/fontawesome.css" />
     <link rel="stylesheet" href="/css/site.css" />
 
-    <link rel="stylesheet" href="/chame-loader/css?filter=demo.css" />
+    <link rel="stylesheet" href="/chame-loader/css?filter=customization.css" />
 </head>
 <body>
     <main>
@@ -36,7 +36,7 @@
     <script src="/js/bootstrap.js"></script>
     <script src="/js/site.js"></script>
 
-    <script src="/chame-loader/js?filter=demo.js"></script>
+    <script src="/chame-loader/js?filter=customization.js"></script>
 </body>
 </html>
 
