--- a/Demo/WebSite/ClientApp/less/site.less
+++ b/Demo/WebSite/ClientApp/less/site.less
@@ -7,15 +7,16 @@
         display: block;
     }
 
-    h2 {
+    h1 {
         margin-bottom: 20px;
     }
+
 }
 
 .demo-container {
     padding: 25px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: 4px dotted red;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: 4px dotted blue;
 }
 
