--- a/Demo/WebSiteContent/Root/A/Views/DemoPartialView.cshtml
+++ b/Demo/WebSiteContent/Root/A/Views/DemoPartialView.cshtml
@@ -1,3 +1,7 @@
-﻿<p>
-    A
+﻿<h3>
+    The current theme is 'A'.
+</h3>
+
+<p>
+    This content is loaded by using the '<strong>/A/Views/DemoPartialView.csthml</strong>' Razor view.
 </p>
