--- a/Demo/WebSiteContent/Root/B/Views/DemoPartialView.cshtml
+++ b/Demo/WebSiteContent/Root/B/Views/DemoPartialView.cshtml
@@ -1,3 +1,7 @@
-﻿<p>
-    B
-</p> 
+﻿<h3>
+    ...and now the current theme is 'B'.
+</h3>
+
+<p>
+    ...and this content is loaded by using the '<strong>/B/Views/DemoPartialView.csthml</strong>' Razor view.
+</p>
