--- a/Demo/WebSite/Views/Demo/Demo1/Demo1.cshtml
+++ b/Demo/WebSite/Views/Demo/Demo1/Demo1.cshtml
@@ -56,13 +56,18 @@
                 <div class="demo-container">
                     @Html.Partial("DemoPartialView")
                 </div>
+
+                <br />
+                <br />
                 
-                @{
+                @Html.Partial("_Logo")
+
+                @*@{
 
                     var s = "<img src=\"/chame-loader/png?filter=logo.png\"/>";
                 }
 <pre>@s</pre>
-                <img src="/chame-loader/png?filter=logo.png"/>
+                <img src="/chame-loader/png?filter=logo.png"/>*@
               
             </div>
         </div>
