--- a/Demo/WebSite/Views/ChameContent/B/Demo/DemoPartialView.cshtml
+++ b/Demo/WebSite/Views/ChameContent/B/Demo/DemoPartialView.cshtml
@@ -1,7 +1,14 @@
 ﻿<h3>
-    ...and now the current theme is 'B'.
+    ...and now the current theme is 'B'...................
+    :)
+    :)
+    :)
+    :)
+    :)
 </h3>
 
 <p>
     ...and this content is loaded by using the '<strong>/B/Views/DemoPartialView.csthml</strong>' Razor view.
 </p>
+
+@Html.Partial("Foobar")
